# whispering-candle

./: .gitignore  Cargo.toml  README.md
examples/: whisp.rs
src/: args.rs  audio.rs  constants.rs  decoder.rs  main.rs  models.rs  multilingual.rs  utils.rs
src/assets/: base-model.safetensors
src/model/: audio_enc.rs  config.rs  m_head_att.rs  mod.rs  res_att.rs  text_dec.rs  whisper.rs
