[package]
name = "translater"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[dependencies]
candle = { version = "0.1.0", package = "candle-core" }
candle-flash-attn = { version = "0.1.0", optional = true }
candle-nn = "0.1.0"
candle-transformers = "0.1.0"
accelerate-src = { version = "0.3.2", optional = true }
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["derive"] }
cudarc = { version = "0.9.14", features = ["f16"], optional = true }
# Comment from candle crate, not from me
# TODO: Switch back to the official gemm implementation once it has caught up. 
gemm = { version = "0.15.6", package = "candle-gemm" }
ggblas = "0.1.2"
hf-hub = "0.2.0"
half = { version = "2.3.1", features = [
	"num-traits",
	"rand_distr",
], optional = true }
intel-mkl-src = { version = "0.8.1", features = [
	"mkl-static-lp64-iomp",
], optional = true }
log = "0.4"
memmap2 = "0.7.1"
num_cpus = "1.15.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
safetensors = "0.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.13.3", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
wav = "1.0.0"
zip = { version = "0.6.6", default-features = false }
penum = "0.1.29"


[dev-dependencies]
anyhow = "1.0.72"
byteorder = "1.4.3"
clap = "4.3.21"
hf-hub = "0.2.0"
memmap2 = "0.7.1"
rand = "0.8.5"
tokenizers = "0.13.3"
tokio = "1.30.0"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
wav = "1.0.0"


[features]
default = []
# accelerate = [
# 	"dep:accelerate-src",
# 	# "candle/accelerate",
# 	"candle-nn/accelerate",
# 	"candle-transformers/accelerate",
# ]
# cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# flash-attn = ["cuda", "dep:candle-flash-attn"]
# mkl = [
# 	"dep:intel-mkl-src",
# 	"candle/mkl",
# 	"candle-nn/mkl",
# 	"candle-transformers/mkl",
# ]
# nccl = ["cuda", "cudarc/nccl", "dep:half"]
